Fix some spacing

--- a/styles.scss
+++ b/styles.scss
@@ -403,6 +403,10 @@ h3 {
     }
 }
 
+.custom-input {
+    margin-right: 8px;
+}
+
 .custom-input + .custom-input {
-    margin-left: 8px;
+    margin-right: 0px;
 }
